# gds-idea-app-templates

./: .dockerignore  .gitignore  CLAUDE.md  README.md  app.py  cdk.context.json  config.toml  pyproject.toml  requirements.txt  setup.sh  smoke-test.sh
.aws-dev/: README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  motd.sh
app_src/: Dockerfile  pyproject.toml  streamlit_app.py
dev_mocks/: .gitignore  dev_mock_authoriser.example.json  dev_mock_user.json
dumper/: __init__.py  config.py  dumper_stack.py
frameworks/dash/: Dockerfile  pyproject.toml
frameworks/fastapi/: pyproject.toml
frameworks/streamlit/: pyproject.toml
gds-idea-cdk-constructs/: README.md  pyproject.toml
gds-idea-cdk-constructs/src/gds_idea_cdk_constructs/: __init__.py
gds-idea-cdk-constructs/src/gds_idea_cdk_constructs/web_app/: __init__.py  _auth_strategies.py  props.py  stack.py
gds-idea-cdk-constructs/src/gds_idea_cdk_constructs/web_app/config/: __init__.py  app_config.py  env_config.py
gds-idea-cdk-constructs/src/gds_idea_cdk_constructs/web_app/constructs/: __init__.py  auth_strategies.py  auth_types.py  web_app.py
src/: Dockerfile  app.py  dumper_app.py  idea_auth.py  test_alb_user.py
src/cognito_user/: __init__.py  authorizer.py  exceptions.py  guard.py  token_verifier.py  user.py
src/cognito_user/helpers/: dash.py  fastapi.py  streamlit.py
template/: configure.py  provide_role.py  smoke_test.py
template/frameworks/dash/: Dockerfile  dash_app.py  pyproject.toml
template/frameworks/fastapi/: Dockerfile  fastapi_app.py  pyproject.toml
template/frameworks/streamlit/: Dockerfile  pyproject.toml  streamlit_app.py
tests/unit/: test_dumper_stack.py
