[project]
name = "dumper"
version = "0.1.0"
description = "AWS CDK infrastructure for deploying Streamlit apps with Cognito auth"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib==2.180.0",
    "constructs>=10.0.0,<11.0.0",
    "gds-idea-cdk-constructs @ git+https://github.com/co-cddo/gds-idea-cdk-constructs@v0.1.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.5",
]

[tool.uv.workspace]
members = ["app_src"]
