[project]
name = "dash-app"
version = "0.1.0"
description = "Dash app with Cognito authentication"
requires-python = ">=3.12"
dependencies = [
    "cognito-auth[dash] @ git+https://github.com/co-cddo/gds-idea-app-auth.git@v0.1.2",
    "gunicorn>=21.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["dash-app"]
