[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI app with Cognito authentication"
requires-python = ">=3.12"
dependencies = [
    "cognito-auth[fastapi] @ git+https://github.com/co-cddo/gds-idea-app-auth.git@v0.1.3",
    "uvicorn[standard]>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["fastapi-app"]
